@@ -50,13 +50,5 @@ function toggle_lines(btn, cls) {
 </table>
 </div>
 
-<div id='footer'>
-    <div class='content'>
-        <p>
-            <a class='nav' href='http://bitbucket.org/ned/coveragepy/'>coverage.py v{{__version__}}</a>
-        </p>
-    </div>
-</div>
-
 </body>
 </html>
